2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Check for size of time_t.

2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psx16/init.c, psxclassic01/init.c, psxeintr_join/init.c:
	Add HAVE_CONFIG_H.

2011-09-05	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxfatal01/psxfatal01.scn, psxfatal01/testcase.h,
	psxfatal02/psxfatal02.scn, psxfatal02/testcase.h,
	psxfatal_support/init.c: Print proper begin and end message.

2011-08-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1890/cpukit
	* psxmsgq01/init.c: POSIX says msg_prio is allowed to be NULL.

2011-08-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxfatal_support/init.c: Ensure that _Thread_BSP_context is
	initialized.

2011-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx16/Makefile.am: New file.

2011-08-01	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psx16/.cvsignore, psx16/init.c, psx16/psx16.doc, psx16/psx16.scn: New
	files. Accidentally missed in previous commit.

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1855/cpukit
	* Makefile.am, configure.ac: Correct signal processing during
	pthread_join. We are supposed to unblock the thread waiting on a
	pthread_join(), dispatch the signal handler, account for it
	potentially overwriting errno, and then have the thread return to
	blocking within pthread_join().
	* psxeintr_join/.cvsignore, psxeintr_join/Makefile.am,
	psxeintr_join/init.c, psxeintr_join/psxeintr_join.doc,
	psxeintr_join/psxeintr_join.scn: New files.

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1867/cpukit
	* Makefile.am, configure.ac, psx12/task.c, psxkey03/init.c,
	psxrwlock01/test.c: Correct implementation of pthread_exit() and
	pthread_join() to support the case where a thread is joinable but
	calls pthread_exit() before a thread has attempted to join.

2011-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1839/filesystem
	* psxfchx01/init.c, psxfchx01/psxfchx01.scn, psxfile01/psxfile01.scn,